<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="24dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/s"
        android:inputType="numberDecimal"
        android:ems="10"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/number"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@+id/sell_ui"
        android:layout_toRightOf="@+id/sell_ui"
        android:text="@string/convert_button_text"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/rub_ui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/number"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="30dp"
        android:text="@string/rub_ui_text"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/eur_ui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rub_ui"
        android:layout_alignStart="@+id/rub_ui"
        android:layout_below="@+id/rub_ui"
        android:layout_marginTop="30dp"
        android:text="@string/eur_ui_text"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/usd_ui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eur_ui"
        android:layout_alignStart="@+id/eur_ui"
        android:layout_below="@+id/eur_ui"
        android:layout_marginTop="25dp"
        android:text="@string/usd_ui_text"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/buy_ui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/number"
        android:layout_marginTop="6dp"
        android:layout_toLeftOf="@+id/s"
        android:layout_toStartOf="@+id/s"
        android:text="@string/buy_ui_text"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/sell_ui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buy_ui"
        android:layout_alignBottom="@+id/buy_ui"
        android:layout_toEndOf="@+id/number"
        android:layout_toRightOf="@+id/number"
        android:text="@string/sell_ui_text"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/rub_sell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/rub_ui"
        android:layout_alignLeft="@+id/sell_ui"
        android:text="@string/loading"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/rub_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/rub_ui"
        android:layout_alignLeft="@+id/buy_ui"
        android:layout_alignTop="@+id/rub_sell"
        android:text="@string/loading"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/eur_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/usd_ui"
        android:layout_alignLeft="@+id/rub_buy"
        android:layout_alignStart="@+id/rub_buy"
        android:text="@string/loading"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/usd_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/usd_ui"
        android:layout_alignLeft="@+id/eur_buy"
        android:layout_alignStart="@+id/eur_buy"
        android:text="@string/loading"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/usd_sell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/usd_buy"
        android:layout_alignBottom="@+id/usd_buy"
        android:layout_alignLeft="@+id/eur_sell"
        android:layout_alignStart="@+id/eur_sell"
        android:text="@string/loading"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/eur_sell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/usd_ui"
        android:layout_alignLeft="@+id/rub_sell"
        android:layout_alignStart="@+id/rub_sell"
        android:text="@string/loading"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/s"
        android:layout_centerHorizontal="true"
        android:text="@string/loading"
        android:textColor="@color/black"
        android:textSize="18sp" />



</RelativeLayout>